# tui-clock

./: .gitignore  .tui_clock.toml.example  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  run.sh
specs/: default.md
tests/: test_blink.py  test_config.py  test_digits.py  test_water.py
tui_clock/: __init__.py  config.py  digits.py  main.py
